SonicOrigins/Uncategorized/C++/ObjectRflParam.h

typedef struct
{
    const char* pValue;
    INSERT_PADDING(8);
}
cstring;
typedef struct
{
    cstring effectName;
    cstring effectNodeName;
    bool follow;
}
EffectInfo;
typedef struct
{
    EffectInfo effectInfo;
    uint32_t frames[2];
}
OneShotEffectInfo;
typedef struct
{
    int32_t dummy;
}
CommonObjectRflParam;
typedef struct
{
    bool isActive;
    cstring uvAnimNames[2];
}
UVAnimationInfo;
typedef struct
{
    bool isActive;
    cstring visAnimNames;
}
VISAnimationInfo;
typedef struct
{
    cstring model;
    cstring animation;
    cstring skeleton;
    float radius;
    EffectInfo effectInfos[2];
    OneShotEffectInfo oneShotEffectInfos[2];
    UVAnimationInfo loopUVAnimInfo;
    VISAnimationInfo loopVISAnimInfo;
}
CommonObjectResourceRflParam;
typedef struct
{
    int32_t dummy;
}
LinePathObjectRflParam;
typedef struct
{
    cstring model;
    cstring normalWaitAnim;
    cstring islandAnims[5];
    cstring skeleton;
    UVAnimationInfo islandEyeUVAnimInfos[5];
    float radius;
}
IslandCommonTailsObjectResourceRflParam;
typedef struct
{
    IslandCommonTailsObjectResourceRflParam islandCommonTailsObjectResourceParam;
}
IslandCommonTailsObjectRflParam;
typedef struct
{
    cstring model;
    cstring normalWaitAnim;
    cstring islandAnims[5];
    cstring skeleton;
    float radius;
}
IslandCommonEggmanObjectResourceRflParam;
typedef struct
{
    IslandCommonEggmanObjectResourceRflParam islandCommonEggmanObjectResourceParam;
}
IslandCommonEggmanObjectRflParam;
typedef struct
{
    cstring model;
    cstring normalWaitAnim;
    cstring islandLeftAnim;
    cstring islandRightAnim;
    cstring skeleton;
    float radius;
}
IslandW1EggmanObjectResourceRflParam;
typedef struct
{
    IslandW1EggmanObjectResourceRflParam islandW1EggmanObjectResourceParam;
}
IslandW1EggmanObjectRflParam;
typedef struct
{
    cstring model;
    cstring normalWaitAnim;
    cstring islandAnims[6];
    cstring skeleton;
    VISAnimationInfo islandVISAnimInfos[6];
    VISAnimationInfo normalWaitVISAnimInfo;
    float radius;
}
IslandCommonKnucklesObjectResourceRflParam;
typedef struct
{
    IslandCommonKnucklesObjectResourceRflParam islandCommonKnucklesObjectResourceParam;
}
IslandCommonKnucklesObjectRflParam;
typedef struct
{
    cstring model;
    cstring animation;
    cstring skeleton;
    VISAnimationInfo VISAnimInfo;
    float radius;
}
IslandW5KnucklesObjectResourceRflParam;
typedef struct
{
    IslandW5KnucklesObjectResourceRflParam islandW5KnucklesObjectResourceParam;
}
IslandW5KnucklesObjectRflParam;
typedef struct
{
    cstring model;
    cstring islandAnims[6];
    cstring skeleton;
    VISAnimationInfo islandVISAnimInfos[6];
    float radius;
}
GlidingKnucklesObjectResourceRflParam;
typedef struct
{
    LinePathObjectRflParam linePathObjectRflParam;
    GlidingKnucklesObjectResourceRflParam glidingKnucklesObjectResourceParam;
}
GlidingKnucklesObjectRflParam;
typedef struct
{
    cstring model;
    cstring normalWaitAnim;
    cstring islandAnims[6];
    cstring skeleton;
    VISAnimationInfo islandVISAnimInfos[6];
    VISAnimationInfo normalWaitVISAnimInfo;
    float radius;
}
IslandCommonAmyObjectResourceRflParam;
typedef struct
{
    IslandCommonAmyObjectResourceRflParam islandCommonAmyObjectResourceParam;
}
IslandCommonAmyObjectRflParam;
typedef struct
{
    EffectInfo effectInfo;
    uint32_t frame;
}
AmyOneShotEffectInfo;
typedef struct
{
    cstring model;
    cstring idleAnim;
    cstring islandAnim;
    cstring skeleton;
    AmyOneShotEffectInfo oneShotEffect;
    VISAnimationInfo idleVISAnimInfo;
    VISAnimationInfo islandVISAnimInfo;
    float radius;
}
IslandW3AmyObjectResourceRflParam;
typedef struct
{
    IslandW3AmyObjectResourceRflParam islandW3AmyObjectResourceParam;
}
IslandW3AmyObjectRflParam;
typedef struct
{
    EffectInfo effectInfo;
    uint32_t startFrame;
    uint32_t endFrame;
}
AmyLoopEffectInfo;
typedef struct
{
    cstring amyModel;
    cstring amyIdleAnim;
    cstring amyIslandAnim;
    cstring amySkeleton;
    cstring hammerModel;
    cstring hammerIdleAnim;
    cstring hammerIslandAnim;
    cstring hammerSkeleton;
    AmyOneShotEffectInfo oneShotEffect;
    AmyLoopEffectInfo loopEffect;
    VISAnimationInfo idleVISAnimInfo;
    VISAnimationInfo islandVISAnimInfo;
    float radius;
}
IslandW4AmyObjectResourceRflParam;
typedef struct
{
    IslandW4AmyObjectResourceRflParam islandW4AmyObjectResourceParam;
}
IslandW4AmyObjectRflParam;
typedef struct
{
    CommonObjectResourceRflParam commonObjectResourceRflParam;
    int32_t dummy;
}
StarlightfloorObjectResourceRflParam;
typedef struct
{
    CommonObjectRflParam commonObjectRflParam;
    StarlightfloorObjectResourceRflParam starlightfloorObjectResourceParam;
}
StarlightfloorObjectRflParam;
typedef struct
{
    CommonObjectResourceRflParam commonObjectResourceRflParam;
    int32_t dummy;
}
CarnivalDrumObjectResourceRflParam;
typedef struct
{
    CommonObjectRflParam commonObjectRflParam;
    CarnivalDrumObjectResourceRflParam carnivalDrumObjectResourceParam;
}
CarnivalDrumObjectRflParam;
typedef struct
{
    int32_t dummy;
}
StaticObjectRflParam;
typedef struct
{
    cstring model;
    float radius;
}
StaticObjectResourceRflParam;
typedef struct
{
    StaticObjectResourceRflParam staticObjectResourceRflParam;
    int32_t dummy;
}
ShadowObjectResourceRflParam;
typedef struct
{
    StaticObjectRflParam staticObjectRflParam;
    ShadowObjectResourceRflParam shadowObjectResourceParam;
}
ShadowObjectRflParam;