SonicOrigins/Uncategorized/C#/ObjectRflParam.cs


    [StructLayout(LayoutKind.Explicit, Size = 336)]
    public struct IslandCommonTailsObjectResourceRflParam
    {
        [FieldOffset(0)]   public CString model;
        [FieldOffset(16)]  public CString normalWaitAnim;
        [FieldOffset(32)]  public CString islandAnims__arr0;
        [FieldOffset(287)] public CString islandAnims__arr1;
        [FieldOffset(542)] public CString islandAnims__arr2;
        [FieldOffset(797)] public CString islandAnims__arr3;
        [FieldOffset(1052)] public CString islandAnims__arr4;
        [FieldOffset(112)] public CString skeleton;
        [FieldOffset(128)] public UVAnimationInfo islandEyeUVAnimInfos__arr0;
        [FieldOffset(168)] public UVAnimationInfo islandEyeUVAnimInfos__arr1;
        [FieldOffset(208)] public UVAnimationInfo islandEyeUVAnimInfos__arr2;
        [FieldOffset(248)] public UVAnimationInfo islandEyeUVAnimInfos__arr3;
        [FieldOffset(288)] public UVAnimationInfo islandEyeUVAnimInfos__arr4;
        [FieldOffset(328)] public float radius;
    }

    [StructLayout(LayoutKind.Explicit, Size = 336)]
    public struct IslandCommonTailsObjectRflParam
    {
        [FieldOffset(0)] public IslandCommonTailsObjectResourceRflParam islandCommonTailsObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 136)]
    public struct IslandCommonEggmanObjectResourceRflParam
    {
        [FieldOffset(0)]   public CString model;
        [FieldOffset(16)]  public CString normalWaitAnim;
        [FieldOffset(32)]  public CString islandAnims__arr0;
        [FieldOffset(287)] public CString islandAnims__arr1;
        [FieldOffset(542)] public CString islandAnims__arr2;
        [FieldOffset(797)] public CString islandAnims__arr3;
        [FieldOffset(1052)] public CString islandAnims__arr4;
        [FieldOffset(112)] public CString skeleton;
        [FieldOffset(128)] public float radius;
    }

    [StructLayout(LayoutKind.Explicit, Size = 136)]
    public struct IslandCommonEggmanObjectRflParam
    {
        [FieldOffset(0)] public IslandCommonEggmanObjectResourceRflParam islandCommonEggmanObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 88)]
    public struct IslandW1EggmanObjectResourceRflParam
    {
        [FieldOffset(0)]  public CString model;
        [FieldOffset(16)] public CString normalWaitAnim;
        [FieldOffset(32)] public CString islandLeftAnim;
        [FieldOffset(48)] public CString islandRightAnim;
        [FieldOffset(64)] public CString skeleton;
        [FieldOffset(80)] public float radius;
    }

    [StructLayout(LayoutKind.Explicit, Size = 88)]
    public struct IslandW1EggmanObjectRflParam
    {
        [FieldOffset(0)] public IslandW1EggmanObjectResourceRflParam islandW1EggmanObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 320)]
    public struct IslandCommonKnucklesObjectResourceRflParam
    {
        [FieldOffset(0)]   public CString model;
        [FieldOffset(16)]  public CString normalWaitAnim;
        [FieldOffset(32)]  public CString islandAnims__arr0;
        [FieldOffset(287)] public CString islandAnims__arr1;
        [FieldOffset(542)] public CString islandAnims__arr2;
        [FieldOffset(797)] public CString islandAnims__arr3;
        [FieldOffset(1052)] public CString islandAnims__arr4;
        [FieldOffset(1307)] public CString islandAnims__arr5;
        [FieldOffset(128)] public CString skeleton;
        [FieldOffset(144)] public VISAnimationInfo islandVISAnimInfos__arr0;
        [FieldOffset(168)] public VISAnimationInfo islandVISAnimInfos__arr1;
        [FieldOffset(192)] public VISAnimationInfo islandVISAnimInfos__arr2;
        [FieldOffset(216)] public VISAnimationInfo islandVISAnimInfos__arr3;
        [FieldOffset(240)] public VISAnimationInfo islandVISAnimInfos__arr4;
        [FieldOffset(264)] public VISAnimationInfo islandVISAnimInfos__arr5;
        [FieldOffset(288)] public VISAnimationInfo normalWaitVISAnimInfo;
        [FieldOffset(312)] public float radius;
    }

    [StructLayout(LayoutKind.Explicit, Size = 320)]
    public struct IslandCommonKnucklesObjectRflParam
    {
        [FieldOffset(0)] public IslandCommonKnucklesObjectResourceRflParam islandCommonKnucklesObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 80)]
    public struct IslandW5KnucklesObjectResourceRflParam
    {
        [FieldOffset(0)]  public CString model;
        [FieldOffset(16)] public CString animation;
        [FieldOffset(32)] public CString skeleton;
        [FieldOffset(48)] public VISAnimationInfo VISAnimInfo;
        [FieldOffset(72)] public float radius;
    }

    [StructLayout(LayoutKind.Explicit, Size = 80)]
    public struct IslandW5KnucklesObjectRflParam
    {
        [FieldOffset(0)] public IslandW5KnucklesObjectResourceRflParam islandW5KnucklesObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 280)]
    public struct GlidingKnucklesObjectResourceRflParam
    {
        [FieldOffset(0)]   public CString model;
        [FieldOffset(16)]  public CString islandAnims__arr0;
        [FieldOffset(271)] public CString islandAnims__arr1;
        [FieldOffset(526)] public CString islandAnims__arr2;
        [FieldOffset(781)] public CString islandAnims__arr3;
        [FieldOffset(1036)] public CString islandAnims__arr4;
        [FieldOffset(1291)] public CString islandAnims__arr5;
        [FieldOffset(112)] public CString skeleton;
        [FieldOffset(128)] public VISAnimationInfo islandVISAnimInfos__arr0;
        [FieldOffset(152)] public VISAnimationInfo islandVISAnimInfos__arr1;
        [FieldOffset(176)] public VISAnimationInfo islandVISAnimInfos__arr2;
        [FieldOffset(200)] public VISAnimationInfo islandVISAnimInfos__arr3;
        [FieldOffset(224)] public VISAnimationInfo islandVISAnimInfos__arr4;
        [FieldOffset(248)] public VISAnimationInfo islandVISAnimInfos__arr5;
        [FieldOffset(272)] public float radius;
    }

    [StructLayout(LayoutKind.Explicit, Size = 288)]
    public struct GlidingKnucklesObjectRflParam
    {
        [FieldOffset(0)] public LinePathObjectRflParam linePathObjectRflParam;
        [FieldOffset(8)] public GlidingKnucklesObjectResourceRflParam glidingKnucklesObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 320)]
    public struct IslandCommonAmyObjectResourceRflParam
    {
        [FieldOffset(0)]   public CString model;
        [FieldOffset(16)]  public CString normalWaitAnim;
        [FieldOffset(32)]  public CString islandAnims__arr0;
        [FieldOffset(287)] public CString islandAnims__arr1;
        [FieldOffset(542)] public CString islandAnims__arr2;
        [FieldOffset(797)] public CString islandAnims__arr3;
        [FieldOffset(1052)] public CString islandAnims__arr4;
        [FieldOffset(1307)] public CString islandAnims__arr5;
        [FieldOffset(128)] public CString skeleton;
        [FieldOffset(144)] public VISAnimationInfo islandVISAnimInfos__arr0;
        [FieldOffset(168)] public VISAnimationInfo islandVISAnimInfos__arr1;
        [FieldOffset(192)] public VISAnimationInfo islandVISAnimInfos__arr2;
        [FieldOffset(216)] public VISAnimationInfo islandVISAnimInfos__arr3;
        [FieldOffset(240)] public VISAnimationInfo islandVISAnimInfos__arr4;
        [FieldOffset(264)] public VISAnimationInfo islandVISAnimInfos__arr5;
        [FieldOffset(288)] public VISAnimationInfo normalWaitVISAnimInfo;
        [FieldOffset(312)] public float radius;
    }

    [StructLayout(LayoutKind.Explicit, Size = 320)]
    public struct IslandCommonAmyObjectRflParam
    {
        [FieldOffset(0)] public IslandCommonAmyObjectResourceRflParam islandCommonAmyObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 48)]
    public struct AmyOneShotEffectInfo
    {
        [FieldOffset(0)]  public EffectInfo effectInfo;
        [FieldOffset(40)] public uint frame;
    }

    [StructLayout(LayoutKind.Explicit, Size = 168)]
    public struct IslandW3AmyObjectResourceRflParam
    {
        [FieldOffset(0)]   public CString model;
        [FieldOffset(16)]  public CString idleAnim;
        [FieldOffset(32)]  public CString islandAnim;
        [FieldOffset(48)]  public CString skeleton;
        [FieldOffset(64)]  public AmyOneShotEffectInfo oneShotEffect;
        [FieldOffset(112)] public VISAnimationInfo idleVISAnimInfo;
        [FieldOffset(136)] public VISAnimationInfo islandVISAnimInfo;
        [FieldOffset(160)] public float radius;
    }

    [StructLayout(LayoutKind.Explicit, Size = 168)]
    public struct IslandW3AmyObjectRflParam
    {
        [FieldOffset(0)] public IslandW3AmyObjectResourceRflParam islandW3AmyObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 48)]
    public struct AmyLoopEffectInfo
    {
        [FieldOffset(0)]  public EffectInfo effectInfo;
        [FieldOffset(40)] public uint startFrame;
        [FieldOffset(44)] public uint endFrame;
    }

    [StructLayout(LayoutKind.Explicit, Size = 280)]
    public struct IslandW4AmyObjectResourceRflParam
    {
        [FieldOffset(0)]   public CString amyModel;
        [FieldOffset(16)]  public CString amyIdleAnim;
        [FieldOffset(32)]  public CString amyIslandAnim;
        [FieldOffset(48)]  public CString amySkeleton;
        [FieldOffset(64)]  public CString hammerModel;
        [FieldOffset(80)]  public CString hammerIdleAnim;
        [FieldOffset(96)]  public CString hammerIslandAnim;
        [FieldOffset(112)] public CString hammerSkeleton;
        [FieldOffset(128)] public AmyOneShotEffectInfo oneShotEffect;
        [FieldOffset(176)] public AmyLoopEffectInfo loopEffect;
        [FieldOffset(224)] public VISAnimationInfo idleVISAnimInfo;
        [FieldOffset(248)] public VISAnimationInfo islandVISAnimInfo;
        [FieldOffset(272)] public float radius;
    }

    [StructLayout(LayoutKind.Explicit, Size = 280)]
    public struct IslandW4AmyObjectRflParam
    {
        [FieldOffset(0)] public IslandW4AmyObjectResourceRflParam islandW4AmyObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 304)]
    public struct StarlightfloorObjectResourceRflParam
    {
        [FieldOffset(0)]   public CommonObjectResourceRflParam commonObjectResourceRflParam;
        [FieldOffset(296)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 312)]
    public struct StarlightfloorObjectRflParam
    {
        [FieldOffset(0)] public CommonObjectRflParam commonObjectRflParam;
        [FieldOffset(8)] public StarlightfloorObjectResourceRflParam starlightfloorObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 304)]
    public struct CarnivalDrumObjectResourceRflParam
    {
        [FieldOffset(0)]   public CommonObjectResourceRflParam commonObjectResourceRflParam;
        [FieldOffset(296)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 312)]
    public struct CarnivalDrumObjectRflParam
    {
        [FieldOffset(0)] public CommonObjectRflParam commonObjectRflParam;
        [FieldOffset(8)] public CarnivalDrumObjectResourceRflParam carnivalDrumObjectResourceParam;
    }

    [StructLayout(LayoutKind.Explicit, Size = 4)]
    public struct StaticObjectRflParam
    {
        [FieldOffset(0)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 24)]
    public struct StaticObjectResourceRflParam
    {
        [FieldOffset(0)]  public CString model;
        [FieldOffset(16)] public float radius;
    }

    [StructLayout(LayoutKind.Explicit, Size = 32)]
    public struct ShadowObjectResourceRflParam
    {
        [FieldOffset(0)]  public StaticObjectResourceRflParam staticObjectResourceRflParam;
        [FieldOffset(24)] public int dummy;
    }

    [StructLayout(LayoutKind.Explicit, Size = 40)]
    public struct ShadowObjectRflParam
    {
        [FieldOffset(0)] public StaticObjectRflParam staticObjectRflParam;
        [FieldOffset(8)] public ShadowObjectResourceRflParam shadowObjectResourceParam;
    }
